--- a/Views/Course/index.cshtml
+++ b/Views/Course/index.cshtml
@@ -1,11 +1,23 @@
+@Model Course
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>course main</h1>
+    <h1>course index page</h1>
+    <p>
+        @Model.Id
+    </p>
+    <p>
+        @Model.Title
+    </p>
+    <p>
+        @Model.Description
+    </p>
 </body>
 </html>
