layout-partialView-section

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using basics
 @using basics.Models
+@using Microsoft.AspNetCore.Mvc.ViewFeatures
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
