--- a/Views/Course/index.cshtml
+++ b/Views/Course/index.cshtml
@@ -1,49 +1,4 @@
-@Model Course
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand " href="#">CourseApp</a>
-                <ul class="navbar-nav me-auto">
-                    <li class="navbar-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#" class="nav-link">kurslar</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="container mt-3">
-        <main>
+@model Course
           
-                <div class= "card mb-3"id="@Model.Id">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="~/img/@Model.Image" class="img-fluid rounded-start" alt="">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">@Model.Title</h5>
-                                <p class="card-text">@Model.Description</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+@await Html.PartialAsync("_Course", @Model)
             
-        </main>
-    </div>
-   
-</body>
-</html>
