--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand " href="/">CourseApp</a>
+        <a class="navbar-brand " asp-controller="Home" asp-action="Index">CourseApp</a>
         <ul class="navbar-nav me-auto">
             <li class="navbar-item">
-                <a href="/home" class="nav-link">Home</a>
+                <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
             </li>
             <li class="navbar-item">
-                <a href="/course/list" class="nav-link">kurslar</a>
+                <a asp-controller="Course" asp-action="List" class="nav-link">kurslar</a>
             </li>
         </ul>
     </div>
